@@ -2,7 +2,7 @@
 
 Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2009-11-22 22:02:17 +0000 (Sun, 22 Nov 2009) $ $Revision: 925 $)
+(As of $Date: 2009-12-07 22:33:41 +0000 (Mon, 07 Dec 2009) $ $Revision: 934 $)
 
 =head2 Changes in Devel::NYTProf 2.11
 
@@ -25,6 +25,8 @@ XXX string eval merging - must allow at least viewing of source for called subs 
   Changed ReadStream SUB_LINE_RANGE tag to SUB_INFO.
 
   Added log=F option to write trace log to a file.
+  Added warning when reading a file with a minor version higher
+    than expected.
 
   Added slowops=N option which enables profiling of potentially slow
     perl opcodes (e.g., system calls and regexs). They're treated like xsubs.
